--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+bcrypt==4.1.2
 blinker==1.7.0
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.2
+Flask-Bcrypt==1.0.1
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
