--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pluggy==1.4.0
 psycopg==3.1.18
 psycopg-binary==3.1.18
 psycopg-pool==3.2.1
+psycopg2-binary==2.9.9
 pytest==8.1.1
 python-dotenv==1.0.1
 typing_extensions==4.10.0
