--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.7
 colorama==0.4.6
 Flask==3.0.2
 Flask-Bcrypt==1.0.1
+greenlet==3.0.3
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
@@ -13,6 +14,7 @@ pluggy==1.4.0
 psycopg==3.1.18
 psycopg-binary==3.1.18
 psycopg-pool==3.2.1
+psycopg2==2.9.9
 pytest==8.1.1
 python-dotenv==1.0.1
 typing_extensions==4.10.0
