--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ colorama==0.4.6
 Flask==3.0.2
 Flask-Bcrypt==1.0.1
 greenlet==3.0.3
+gunicorn==22.0.0
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
